# fes-thermal-sandbox

./: .gitignore  AGENTS.md  README.md  project_setup_scratch.md
.agent/handoff/proposed_skeleton/: .gitignore  README.md  pyproject.toml
.agent/handoff/proposed_skeleton/config/: config.yaml  defaults.yaml
.agent/handoff/proposed_skeleton/data/: README.md
.agent/handoff/proposed_skeleton/tests/: test_acceptance.py  test_engines.py
.agent/handoff/proposed_skeleton/treeheat/: cli.py  (+2 more)
treeheat/: .gitignore  README.md  pyproject.toml
treeheat/app/: background.py  streamlit_app.py  styles.py
treeheat/app/.streamlit/: config.toml
treeheat/app/screens/: __init__.py  guide.py  results.py  run_screen.py  setup.py
treeheat/config/: config.yaml
treeheat/data/: README.md  root_material_database.csv
treeheat/docs/: methodology.md  runbook_gh_to_project.md
treeheat/tests/: conftest.py  test_acceptance.py  test_capstone_external.py  test_config.py  test_engines.py  test_imports.py  test_orchestration.py  test_physics_engines.py  test_project.py  test_reference_data.py
treeheat/treeheat/: __init__.py  api.py  cli.py  config.py  defaults.yaml  project.py
treeheat/treeheat/io/: __init__.py  grids.py  materials.py  schema.py  species.py  weather.py
treeheat/treeheat/orchestration/: __init__.py  hashing.py  jobspec.py  provenance.py  runner.py  runstate.py
treeheat/treeheat/physics/: __init__.py  ground.py  integrator.py  soil_moisture.py  species_params.py  surface.py
treeheat/treeheat/pipeline/: __init__.py  biophysics.py  grid_materials.py  raytrace.py
treeheat/treeheat/project_data/: base_material_library.txt  tree_species_database.csv
treeheat/treeheat/radiance/: runner.py  upwelling.py
treeheat/treeheat/risk/: __init__.py  analysis.py  metrics.py
treeheat/treeheat/viz/: plots.py
(+136 files in other folders)
