[project]
name = "treeheat"
version = "0.0.0"
description = "Tree thermal-safety simulation pipeline (clean rebuild)"
requires-python = ">=3.10"
dependencies = [
  "numpy", "pandas", "pyarrow", "scipy", "geopandas", "pyyaml", "pyradiance",
]

[project.scripts]
treeheat = "treeheat.cli:main"

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
